Versinon 0.14

2005-06-02 Heinrich Wendel <h_wendel@cojobo.net>
	* Menu.py, MenuEditor.py: Bugfixes...

version 0.13

2005-06-01 Heinrich Wendel <h_wendel@cojobo.net>
	* Menu.py, MenuEditor.py: Bugfixes...
	* Config.py: Add root_mode

Version 0.12

2005-05-30 Heinrich Wendel <h_wendel@cojobo.net>
	* MenuEditor.py: New in this release, use to edit Menus thx to Travis
	Watkins <alleykat@gmail.com> and Matt Kynaston <mattkyn@gmail.com> for
	their help
	* Menu.py, IniFile.py, DesktopEntry.py: Lot of bugfixing...
	* BaseDirectory.py: Add xdg_cache_home
	* IconTheme.py, Config.py: More caching stuff, make cachetime
	configurable

Version 0.11

2005-05-23 Heinrich Wendel <h_wendel@cojobo.net>
	* DesktopEntry.p, Menu.py: A lot of bugfixes, thx to Travis Watkins
	<alleykat@gmail.com>

2005-05-02 Heinrich Wendel <h_wendel@cojobo.net>
	* Config.py:
	Module to configure Basic Settings, currently available:
	- Locale, IconTheme, IconSize, WindowManager
	* Locale.py:
	Internal Module to support Locales
	* Mime.py:
	Implementation of the Mime Specification
	* Menu.py:
	Now supports LegacyDirs
	* RecentFiles.py:
	Implementation of the Recent Files Specification

Version 0.10

2005-04-26 Heinrich Wendel <h_wendel@cojobo.net>
	* Menu.py:
	various bug fixing to support version 1.0.draft-1

2005-04-13 Heinrich Wendel <h_wendel@cojobo.net>
	* IniFily.py:
	Detect if a .desktop file was edited
	* Menu.py
	Fix bug caused by excluding NoDisplay/Hidden Items to early

Version 0.9

2005-03-23 Heinrich Wendel <h_wendel@cojobo.net>
	* IniFile.py:
	various speedups
	* Menu.py:
	add support for <MergeFile type="parent">, menu-spec-0.91

2005-03-21 Heinrich Wendel <h_wendel@cojobo.net>
	* IniFily.py:
	Small fixes
	* Menu.py:
	remove __preparse and don't edit the parsed document, so menu editing is
	possible
	store parsed document in Menu.Doc
	store document name in Menu.Filename

2005-03-18 Heinrich Wendel <h_wendel@cojobo.net>
	* Menu.py: