@@ -1,3 +1,6 @@
+2005-08-04 Heinrich Wendel <h_wendel@cojobo.net>
+	* Menu.py, IconTheme.py: Bugfixes...
+
 Versinon 0.14
 
 2005-06-02 Heinrich Wendel <h_wendel@cojobo.net>
